--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,8 @@
 
     </android.support.v7.widget.CardView>
 
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -34,24 +36,39 @@
         android:gravity="center"
         android:orientation="vertical">
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:gravity="center"
+            android:textColor="@android:color/darker_gray"
+            android:hint="Enter Elements separate by comma (,)"
+            android:layout_gravity="center"
+            android:padding="10dp"/>
 
         <EditText
-            android:layout_width="wrap_content"
+            android:id="@+id/elements_entered"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/enter_no_of_elements_to_sort"
-            android:inputType="number"
+            android:inputType="text"
+            android:lines="1"
+            android:layout_marginRight="20dp"
+            android:layout_marginLeft="20dp"
             android:gravity="center"
             android:layout_gravity="center"
             />
+
         <Button
-            android:layout_width="wrap_content"
+            android:id="@+id/btn_sort"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:layout_gravity="center"
             android:text="@string/sort"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
             android:background="@drawable/button_background"
             />
-
 
 
         <TextView
@@ -67,16 +84,14 @@
 
 
         <Button
-            android:layout_width="match_parent"
+            android:id="@+id/btn_random_sort"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
             android:layout_gravity="center"
             android:text="@string/random_sort"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
+            android:padding="20dp"
             android:background="@drawable/button_background"
             />
-
 
     </LinearLayout>
 
